Ensure home container is centered and doesn't get too wide

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,5 +1,5 @@
 body {
-  font-size: 1.125em;
+  font-size: $base-font-size;
   line-height: 1.4;
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
 }
