--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -17,3 +17,5 @@ $space-sm: 0.5em;
 $space-md: 1em;
 $space-lg: 2em;
 $space-xl: 4em;
+
+$base-font-size: 1.25em;
